[gd_scene load_steps=3 format=3 uid="uid://cb36f58b35nwp"]

[ext_resource type="StyleBox" uid="uid://e5bltd1uh6qj" path="res://resources/themes/MenuFrame.tres" id="1_5bsbs"]
[ext_resource type="Script" path="res://scripts/menus/HostMenu.gd" id="1_k7i3w"]

[node name="HostMenu" type="PanelContainer"]
custom_minimum_size = Vector2(384, 2.08165e-12)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_5bsbs")
script = ExtResource("1_k7i3w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Game created with ID"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
dragger_visibility = 1

[node name="PartyID" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "123456"
horizontal_alignment = 1

[node name="CopyButton" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(72, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Copy"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Waiting for player 2"
horizontal_alignment = 1

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"
